fix: make sure all param names are correct
