# datamodel.go
@@ -1,5 +1,5 @@
 // Code generated by go generate; DO NOT EDIT.
-// 2021-01-31 01:54:49.846316048 +0100 CET m=+0.000298915
+// 2021-02-08 11:36:58.889320266 +0100 CET m=+0.000242030
 
 package apiclient
 
@@ -176,9 +176,9 @@ type TorTargetsTarget struct {
 
 // URLSRequest is the URLS request.
 type URLSRequest struct {
-	Categories  string `query:"categories"`
-	CountryCode string `query:"country_code"`
-	Limit       int64  `query:"limit"`
+	CategoryCodes string `query:"category_codes"`
+	CountryCode   string `query:"country_code"`
+	Limit         int64  `query:"limit"`
 }
 
 // URLSResponse is the URLS response.
