# newrequest.go
@@ -1,5 +1,5 @@
 // Code generated by go generate; DO NOT EDIT.
-// 2021-01-31 01:54:50.014865434 +0100 CET m=+0.000135612
+// 2021-02-08 11:36:59.093570087 +0100 CET m=+0.000156640
 
 package apiclient
 
@@ -140,8 +140,8 @@ func newURLSRequest(ctx context.Context, baseURL string, req *URLSRequest) (*htt
 	}
 	URL.Path = "/api/v1/test-list/urls"
 	query := url.Values{}
-	if req.Categories != "" {
-		query.Add("categories", req.Categories)
+	if req.CategoryCodes != "" {
+		query.Add("category_codes", req.CategoryCodes)
 	}
 	if req.CountryCode != "" {
 		query.Add("country_code", req.CountryCode)
